@@ -9,6 +9,9 @@
 
   * PasteVert behaves beyond the right end of lines again.
 
+  * AutoComplete keeps words containing apostrophes as single words ("can't"
+    instead of "can" and "t").
+
 3.0.1 2015-06-22
 
   * Updated version of GNU regex library provides 64-bit regular
